tests/lexer/invalid/test_unterminated_comment.src
/* незакрытый комментарий
int x = 42;